--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,4 @@ production:
   database: carsonrcole-production
   username: <%= Rails.application.credentials.postgresql.production.username %>
   password: <%= Rails.application.credentials.postgresql.production.password %>
-  host: XXXXX-db.internal
+  host: <%= Rails.application.credentials.postgresql.production.host %>
