replaced mysql with sqlite3

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -22,10 +22,10 @@ registry:
 # Remember to run `kamal env push` after making changes!
 env:
   clear:
-    DB_HOST: localhost
+    DB_HOST: 37.184.37.254
   secret:
     - RAILS_MASTER_KEY
-    - MYSQL_ROOT_PASSWORD
+    - DB_ROOT_PASSWORD
 
 # Use a different ssh user than root
 # ssh:
@@ -42,22 +42,22 @@ env:
 #     host: ssh://app@192.168.0.1
 
 # Use accessory services (secrets come from .env).
-accessories:
-  db:
-    image: mysql:8.0
-    roles:
-      - web
-    port: 3306
-    env:
-      clear:
-        MYSQL_ROOT_HOST: '%'
-      secret:
-        - MYSQL_ROOT_PASSWORD
-    files:
+# accessories:
+#   db:
+#     image: postgres:16.0
+#     roles:
+#       - web
+#     port: 5432
+#     env:
+#       clear:
+#         MYSQL_ROOT_HOST: '%'
+#       secret:
+#         - MYSQL_ROOT_PASSWORD
+    # files:
       # - config/mysql/production.cnf:/etc/mysql/my.cnf
-      - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-    directories:
-      - data:/var/lib/mysql
+      # - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
+    # directories:
+      # - data:/var/lib/postgre
 #   redis:
 #     image: redis:7.0
 #     host: 192.168.0.2
