--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,22 @@
+# SQLite. Versions 3.8.0 and up are supported.
+#   gem install sqlite3
+#
+#   Ensure the SQLite 3 gem is defined in your Gemfile
+#   gem "sqlite3"
+#
 default: &default
-  adapter: mysql
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: PASSWORD
-  host: localhost
+  timeout: 5000
 
 development:
   <<: *default
-  database: about_development
+  database: storage/about-development.sqlite3
 
 test:
   <<: *default
-  database: about_test
+  database: storage/about-test.sqlite3
 
 production:
   <<: *default
-  host: ENV["DB_HOST"]
-  database: about_production
-  password: ENV["MYSQL_ROOT_PASSWORD"]
+  database: storage/about-production.sqlite3
