--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,19 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
 
 development:
   <<: *default
-  database: storage/about-development.sqlite3
+  database: about-development
 
 test:
   <<: *default
-  database: storage/about-test.sqlite3
+  database: about-test
 
 production:
   <<: *default
-  database: storage/about-production.sqlite3
+  host: <%= ENV["DB_HOST"] %>
+  database: about-production
+  username: about
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
