--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,6 @@ test:
 production:
   <<: *default
   host: <%= ENV["DB_HOST"] %>
-  database: about-production
+  database: about_production
   username: about
   password: <%= ENV["POSTGRES_PASSWORD"] %>
